--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "dream-life-planner",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://alyonabahaleisha.github.io/dream-life-planner",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -32,6 +35,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
     "vite": "^6.0.1"
   }
