--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
@@ -28,7 +29,8 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
-    "tailwind-merge": "^2.5.5",
+    "react-router-dom": "^7.1.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
